chart/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
    - port: 8000
  selector:
    io.kompose.service: backend
