chart/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - port: 8080
  selector:
    io.kompose.service: frontend
