chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: backend
            port:
              number: 8000
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: frontend
            port:
              number: 8080
        path: /
        pathType: Prefix
